[gd_scene load_steps=4 format=3 uid="uid://bu4boyncthkj1"]

[ext_resource type="Script" path="res://main_menu/main_menu.gd" id="1_33j78"]
[ext_resource type="PackedScene" uid="uid://caqmojs4j7m4" path="res://common/progress_bar.tscn" id="2_jm0t3"]

[sub_resource type="QuadMesh" id="QuadMesh_wmi76"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_33j78")

[node name="MeshInstance2D2" type="MeshInstance2D" parent="."]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
position = Vector2(514, 288)
scale = Vector2(780, 456)
mesh = SubResource("QuadMesh_wmi76")

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
position = Vector2(514.125, 288)
scale = Vector2(772.25, 448)
mesh = SubResource("QuadMesh_wmi76")

[node name="MeshInstance2D3" type="MeshInstance2D" parent="."]
modulate = Color(0.686275, 0.686275, 0.686275, 1)
position = Vector2(514.125, 296)
scale = Vector2(772.25, 100)
mesh = SubResource("QuadMesh_wmi76")

[node name="Home3" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = 96.0
offset_right = -161.0
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Train"

[node name="Home2" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 159.0
offset_top = 96.0
offset_right = 318.0
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Shop"

[node name="Home" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.0
offset_top = 96.0
offset_right = 115.0
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Competition"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -24.0
offset_right = 78.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 40
text = "MaDuck"
fit_content = true

[node name="EnergyBar" parent="." instance=ExtResource("2_jm0t3")]
offset_left = 168.0
offset_top = 88.0
offset_right = 457.0
offset_bottom = 115.0

[node name="SpeedBar" parent="." instance=ExtResource("2_jm0t3")]
offset_left = 168.0
offset_top = 136.0
offset_right = 457.0
offset_bottom = 163.0

[node name="JumpBar" parent="." instance=ExtResource("2_jm0t3")]
offset_left = 168.0
offset_top = 192.0
offset_right = 457.0
offset_bottom = 219.0

[node name="EnergyLabel" type="RichTextLabel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -304.0
offset_top = -202.0
offset_right = -80.0
offset_bottom = -142.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 20
text = "Energy:		"
fit_content = true

[node name="SpeedLabel" type="RichTextLabel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -304.0
offset_top = -153.0
offset_right = -80.0
offset_bottom = -93.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 20
text = "Speed:		"
fit_content = true

[node name="JumpLabel" type="RichTextLabel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -304.0
offset_top = -99.0
offset_right = -80.0
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 20
text = "Jump:			"
fit_content = true
